--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ h3 {
     font-size: 18px;
     font-weight: 400;
     font-family: "CursedTimerUlil-Aznm";
-    background-color: transparent;
+    background-color: #1B244A;
     color: #9AABDB;
     border: 2px solid #9AABDB;
     border-radius: 5px;
@@ -73,7 +73,7 @@ h3 {
     font-weight: bold;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding: 6px 10px;
-    background-color: transparent;
+    background-color: #1B244A;
     color: #9AABDB;
     border: 1px solid #9AABDB;
     border-radius: 5px;
