--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ h3 {
     border-radius: 5px;
 }
 
-.new-game {
+.new-game-btn {
     display: block;
     margin: 15px auto;
     font-size: 16px;
@@ -79,6 +79,6 @@ h3 {
     border-radius: 5px;
 }
 
-.inc-btn:active, .new-game:active {
+.inc-btn:active, .new-game-btn:active {
     background-color: #151C3B;
 }
